# littleorgans

./: .fmmrc.toml  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LESSONS.md  README.md  justfile  moon.yml
crates/lilo/: Cargo.toml  build.rs
crates/lilo-common/: Cargo.toml
crates/lilo-common/src/: diagnostic.rs  exit_codes.rs  lib.rs  logging.rs  sql.rs  version.rs
crates/lilo-im-core/: Cargo.toml  README.md
crates/lilo-im-core/src/: audit.rs  error.rs  lib.rs  peer_creds.rs  types.rs
crates/lilo-im-core/tests/: core_snapshots.rs  peer_creds.rs  principal_forward_compat.rs
crates/lilo-im-core/tests/snapshots/: core_snapshots__audit_decision_json.snap  core_snapshots__authz_error_display.snap
crates/lilo-im-store/: CHANGELOG.md  Cargo.toml  README.md
crates/lilo-im-store/migrations/: 0001_audit.sql
crates/lilo-im-store/src/: config.rs  lib.rs  schema.rs  sqlite.rs
crates/lilo-im-store/src/sqlite/: audit.rs
crates/lilo-im-store/tests/: audit.rs
crates/lilo-im-store/tests/snapshots/: audit__audit_table_columns.snap
crates/lilo-im-stub/: Cargo.toml  README.md
crates/lilo-im-stub/src/: lib.rs
crates/lilo-im-stub/tests/: stub_authorizer.rs
crates/lilo-im-stub/tests/snapshots/: stub_authorizer__stub_authorizer_audit_decisions.snap
crates/lilo-paths/: Cargo.toml
crates/lilo-paths/src/: env.rs  lib.rs  lilo.rs  runtime.rs  session.rs
crates/lilo-rm-client/: Cargo.toml
crates/lilo-rm-client/src/: event_watcher.rs  lib.rs
crates/lilo-rm-client/tests/: integration_event_watcher.rs  integration_typed_helpers.rs  typed_helpers.rs
crates/lilo-rm-client/tests/common/: daemon.rs  mock_socket.rs
crates/lilo-test-support/: Cargo.toml
crates/lilo-test-support/src/: lib.rs
crates/lilo/src/: main.rs
crates/lilo/src/cli/: daemon.rs  doctor.rs  generated_help.rs  generated_schema.rs  identity.rs  mod.rs
crates/lilo/tests/: daemon_status.rs  generated_surface_guard.rs  identity.rs  version.rs
internal/db/: Cargo.toml
internal/db/migrations/: 0001_unified_schema.sql
internal/db/src/: lib.rs
internal/identity/service/: Cargo.toml
internal/identity/service/src/: client.rs  lib.rs
internal/identity/service/tests/: factory.rs
internal/runtime/daemon/: Cargo.toml
internal/runtime/daemon/src/: api.rs  backend.rs  docker_argv.rs  docker_command.rs  docker_preflight.rs  docker_runtime.rs  doctor.rs  event_log.rs  handler.rs  identity.rs  lib.rs  mcp_bridge.rs  reconcile.rs  runtime_kill.rs  server.rs  service.rs  shim_socket.rs  socket.rs  spawn_preflight.rs  test_support.rs
internal/runtime/daemon/src/handler/: tests.rs
internal/runtime/daemon/src/reconcile/: tests.rs
internal/runtime/daemon/src/server/: bootstrap.rs  config.rs  runner.rs  spawn.rs  state.rs  status.rs  termination.rs  tests.rs  watcher.rs
internal/runtime/daemon/src/snapshots/: lilo_runtime_daemon__docker_argv__tests__docker_run_launch_emits_declared_mounts_in_order.snap
internal/runtime/daemon/src/spawn_preflight/: tests.rs
internal/runtime/daemon/tests/: runtime_domain_api.rs
internal/runtime/launchers/: Cargo.toml
internal/runtime/launchers/src/: claude.rs  codex.rs  lib.rs
internal/runtime/launchers/tests/: conformance.rs
internal/runtime/store/: Cargo.toml
internal/runtime/store/src/: config.rs  schema.rs
internal/runtime/store/src/sqlite/: lifecycle.rs
internal/session/app/: Cargo.toml  README.md  build.rs
internal/session/app/benches/: hot_path.rs
internal/session/app/src/: cli.rs  compose.rs  lib.rs  main.rs  tool_contracts.rs  tool_docs.rs
internal/session/app/src/cli/: capture.rs  cli_def.rs  client.rs  config.rs  daemon.rs  delete.rs  doctor.rs  generated_help.rs  get.rs  label.rs  logs.rs  mail.rs  mcp.rs  namespace.rs  namespace_resolver.rs  nudge.rs  output.rs  run.rs  selector_scope.rs  wait.rs
internal/session/app/src/mcp/: generated_instructions.rs  protocol.rs  response.rs  server.rs
internal/session/app/templates/: SKILL.md
internal/session/app/tests/: cli_config_test.rs  cli_delete_test.rs  cli_get_test.rs  cli_help_surface_test.rs  cli_isolation_test.rs  cli_namespace_test.rs  cli_selector_scope_test.rs  generated_surface_guard_test.rs  mcp_protocol_test.rs  mcp_schema_snapshot_test.rs  version_flag_test.rs
internal/session/app/tests/cli_get_test/: agent_config.rs  create_session.rs  help.rs  helpers.rs  run_resolution.rs  session_read.rs
internal/session/app/tests/common/: mod.rs
internal/session/app/tests/mcp_protocol_test/: agent_lifecycle.rs  helpers.rs  mail.rs  schema.rs  selectors.rs
internal/session/app/tests/snapshots/: mcp_schema_snapshot_test__mcp_server_instructions.snap  mcp_schema_snapshot_test__mcp_tool@agent_capture.snap  mcp_schema_snapshot_test__mcp_tool@agent_delete.snap  mcp_schema_snapshot_test__mcp_tool@agent_get.snap  mcp_schema_snapshot_test__mcp_tool@agent_label.snap  (+19 more)
internal/session/app/tools/: capture.toml  mail.toml  nudge.toml  run.toml
internal/session/core/: Cargo.toml  build.rs
internal/session/core/src/: agent_config.rs  lib.rs  mcp.rs  paths.rs  proto.rs  tool_sources.rs
internal/session/daemon/: Cargo.toml
internal/session/daemon/src/: agent_config.rs  background_task.rs  events.rs  handler.rs  identity_client.rs  lib.rs  lifecycle.rs  mcp_bridge.rs  mcp_tools.rs  namespace.rs  polish.rs  reconcile.rs  server.rs  service.rs  socket.rs  spawn_request.rs  store_lock.rs
internal/session/daemon/tests/: capture_target.rs  delete_grace_expired.rs  handler.rs  handler_messaging.rs  mcp_tools.rs  namespace_rpc.rs  rtmd_driver.rs  shim_reaping.rs
internal/session/driver/: Cargo.toml
internal/session/driver/src/: conv.rs  driver.rs  in_process.rs  lib.rs  port.rs  rtmd.rs
internal/session/driver/tests/: port_conformance.rs  rtmd_nudge.rs  rtmd_spawn.rs
internal/session/store/: Cargo.toml
internal/session/store/src/: lib.rs  sqlite.rs
internal/wire/: Cargo.toml
internal/wire/src/: lib.rs
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs
tests/integration/tests/: db_contract.rs  identity_cli.rs  session_spawn_contract.rs  shutdown_contract.rs
(+138 files in other folders)
