[workspace]
members = [
    "crates/lilo",
    "crates/lilo-im-core",
    "crates/lilo-im-store",
    "crates/lilo-im-stub",
    "crates/lilo-common",
    "crates/lilo-paths",
    "internal/identity/service",
    "tools/xtask",
]
resolver = "3"

[workspace.package]
version = "0.8.0"
edition = "2024"
authors = ["Stuart Robinson"]
license = "MIT"
repository = "https://github.com/littleorgans/littleorgans"
homepage = "https://github.com/littleorgans/littleorgans"
rust-version = "1.90"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
insta = { version = "1", features = ["json"] }
lilo-im-core = { path = "crates/lilo-im-core", version = "0.8.0" }
lilo-im-store = { path = "crates/lilo-im-store", version = "0.8.0" }
lilo-im-stub = { path = "crates/lilo-im-stub", version = "0.8.0" }
lilo-identity-service = { path = "internal/identity/service" }
nix = { version = "0.30", features = ["socket", "user"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"
thiserror = "2.0"
tokio = { version = "1", features = ["macros", "net", "rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.9", features = ["serde", "v7"] }

[workspace.lints.clippy]
needless_pass_by_value = "warn"
return_self_not_must_use = "warn"
unnested_or_patterns = "warn"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true

[profile.dist]
inherits = "release"
lto = "thin"

[profile.install-local]
inherits = "release"
codegen-units = 16
lto = false

[workspace.metadata.dist]
cargo-dist-version = "0.31.0"
ci = "github"
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-unknown-linux-musl",
    "aarch64-unknown-linux-musl",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
]
installers = ["shell"]
github-attestations = true
create-release = false
unix-archive = ".tar.gz"
windows-archive = ".zip"
include = ["LICENSE", "README.md"]
auto-includes = false
pr-run-mode = "skip"
