[workspace]
members = [
    "crates/lilo",
    "crates/lilo-im-core",
    "crates/lilo-im-store",
    "crates/lilo-im-stub",
    "crates/lilo-common",
    "crates/lilo-paths",
    "crates/lilo-rm-core",
    "crates/lilo-rm-client",
    "internal/identity/service",
    "internal/runtime/platform",
    "internal/runtime/launchers",
    "internal/runtime/store",
    "internal/runtime/daemon",
    "internal/runtime/app",
    "tools/xtask",
]
resolver = "3"

[workspace.package]
version = "0.8.0"
edition = "2024"
authors = ["Stuart Robinson"]
license = "MIT"
repository = "https://github.com/littleorgans/littleorgans"
homepage = "https://github.com/littleorgans/littleorgans"
rust-version = "1.95"

[workspace.dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["clock", "serde"] }
clap = { version = "4.5.51", features = ["derive"] }
insta = { version = "1.43.2", features = ["json", "redactions"] }
libc = "0.2.186"
lilo-im-core = { path = "crates/lilo-im-core", version = "0.8.0" }
lilo-im-store = { path = "crates/lilo-im-store", version = "0.8.0" }
lilo-im-stub = { path = "crates/lilo-im-stub", version = "0.8.0" }
lilo-identity-service = { path = "internal/identity/service" }
lilo-paths = { path = "crates/lilo-paths", version = "0.8.0" }
lilo-rm-client = { path = "crates/lilo-rm-client", version = "0.8.0" }
lilo-rm-core = { path = "crates/lilo-rm-core", version = "0.8.0" }
lilo-runtime-app = { path = "internal/runtime/app" }
lilo-runtime-daemon = { path = "internal/runtime/daemon" }
lilo-runtime-launchers = { path = "internal/runtime/launchers" }
lilo-runtime-platform = { path = "internal/runtime/platform" }
lilo-runtime-store = { path = "internal/runtime/store" }
nix = { version = "0.30", features = ["socket", "user"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.3", features = ["chrono", "migrate", "runtime-tokio", "sqlite", "uuid"] }
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = [
    "fs",
    "io-std",
    "io-util",
    "macros",
    "net",
    "process",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
toml = "0.8.23"
tracing = "0.1.41"
# `json` feature retained beyond the runtime-matters baseline because
# crates/lilo-common/src/logging.rs builds a JSON formatter via `.json()`.
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.18.1", features = ["serde", "v7"] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
unwrap_used = "allow"
expect_used = "allow"
needless_pass_by_value = "warn"
return_self_not_must_use = "warn"
unnested_or_patterns = "warn"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true

[profile.dist]
inherits = "release"
lto = "thin"

[profile.install-local]
inherits = "release"
codegen-units = 16
lto = false

[workspace.metadata.dist]
cargo-dist-version = "0.31.0"
ci = "github"
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-unknown-linux-musl",
    "aarch64-unknown-linux-musl",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
]
installers = ["shell"]
github-attestations = true
create-release = false
unix-archive = ".tar.gz"
windows-archive = ".zip"
include = ["LICENSE", "README.md"]
auto-includes = false
pr-run-mode = "skip"
