[package]
name = "lilo-im-core"
description = "Identity Matters core: Authorizer trait, Principal types, peer credential extraction"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["iam", "authorization", "audit", "principal"]
categories = ["authentication"]

[lib]
name = "lilo_im_core"
path = "src/lib.rs"

[dependencies]
chrono.workspace = true
nix.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true

[lints]
workspace = true
