[package]
name = "lilo-test-support"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
assert_cmd.workspace = true
tempfile.workspace = true

[lints]
workspace = true
