[package]
name = "lilo"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = true

[[bin]]
name = "lilo"
path = "src/main.rs"

[dependencies]
clap.workspace = true
lilo-common = { path = "../lilo-common", version = "0.8.0" }
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
