[package]
name = "lilo-identity-service"
description = "Internal identity service factory for littleorgans daemon composition"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
publish = false

[lib]
name = "lilo_identity_service"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
lilo-im-core.workspace = true
lilo-im-store.workspace = true
lilo-im-stub.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
