[package]
name = "lilo-identity-service"
description = "Internal identity service factory for littleorgans daemon composition"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
publish = false

[lib]
name = "lilo_identity_service"
path = "src/lib.rs"

[dependencies]
lilo-im-core.workspace = true
lilo-im-store.workspace = true
lilo-im-stub.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
lilo-db.workspace = true
lilo-paths.workspace = true
tempfile.workspace = true

[lints]
workspace = true
