[package]
name = "lilo-runtime-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "lilo_runtime_daemon"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
lilo-db.workspace = true
lilo-paths.workspace = true
lilo-rm-core.workspace = true
lilo-runtime-launchers.workspace = true
lilo-runtime-platform.workspace = true
lilo-runtime-store.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
insta.workspace = true
lilo-runtime-platform = { workspace = true, features = ["test-support"] }
tempfile.workspace = true

[lints]
workspace = true
