[package]
name = "lilo-runtime-store"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "lilo_runtime_store"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
lilo-common = { path = "../../../crates/lilo-common", version = "0.8.0" }
lilo-db.workspace = true
lilo-paths.workspace = true
lilo-rm-core.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
