[package]
name = "lilo-session-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "lilo_session_core"
path = "src/lib.rs"

[dependencies]
chrono.workspace = true
indexmap.workspace = true
lilo-paths.workspace = true
lilo-rm-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
uuid.workspace = true

[lints]
workspace = true
