[package]
name = "lilo-session-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "lilo_session_daemon"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
lilo-im-core.workspace = true
lilo-im-store.workspace = true
lilo-im-stub.workspace = true
lilo-rm-client.workspace = true
lilo-rm-core.workspace = true
lilo-session-core.workspace = true
lilo-session-driver.workspace = true
lilo-session-store.workspace = true
nix.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
uuid.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
async-trait.workspace = true
tempfile.workspace = true

[lints]
workspace = true
